# python-monorepo

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml
deployables/bar/: Dockerfile  pyproject.toml
deployables/bar/bar/: main.py
deployables/foo/: Dockerfile  pyproject.toml
deployables/foo/foo/: main.py
lib/log/: pyproject.toml
lib/log/log/: logger.py
lib/log/tests/: test_logger.py
